app-03/deployment-nginx-app-03.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app03
spec:
  selector:
    matchLabels:
      app: nginx-app03
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: nginx-app03
    spec:
      containers:
      - name: nginx-app03
        image: nexus-repo.example.com/nginx-app03
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: svc-nginx-app03
  labels:
    app: nginx-app03
    service: nginx-app03
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8080
  selector:
    app: nginx-app03
