app-03/app-03-gw-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gw-nginx-app03
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vsvc-nginx-app03
spec:
  hosts:
  - "*"
  gateways:
  - gw-nginx-app03
  http:
  - match:
    - uri:
        prefix: /app03
    route:
    - destination:
        host: svc-nginx-app03
        port:
          number: 80
